# YAWT

./: .env.example  .gitignore  Matan Hershko and Yaniv Golan c08718ad-f93c-4188-9a89-154efb2bc4b3 (1)_transcription.srt  Matan Hershko and Yaniv Golan c08718ad-f93c-4188-9a89-154efb2bc4b3 (1)_transcription.txt  README.md  audio_handler.py  config.py  diarization.py  freeze.py  logging_setup.py  pyproject.toml  requirements.txt  setup.py  test-trans-ctx_transcription.srt  test-trans-ctx_transcription.txt  trans-ctx.py  transcription.py
.github/workflows/: ci.yml  generate_requirements.yml
config/: default_config.yaml  example_config.yaml
samples/My Fair Lady/: source.url
samples/My Fair Lady/transcriptions/: My Fair Lady - The Rain In Spain.srt  My Fair Lady - The Rain In Spain.stjson  My Fair Lady - The Rain In Spain.txt
samples/multi-lang/podcast - Lior Atias - Executive Summary/: source.url
samples/multi-lang/podcast - Lior Atias - Executive Summary/transcriptions/: Lior Atias - Executive Summary - Oct 22, 2024 - with Yaniv Golan.srt  Lior Atias - Executive Summary - Oct 22, 2024 - with Yaniv Golan.stjson  (+1 more)
scripts/: yawt_frozen.py
src/yawt/: __init__.py  audio_handler.py  config.py  constants.py  diarization.py  exceptions.py  logging_setup.py  main.py  output_writer.py  stj.py  transcription.py
tests/: conftest.py  test_audio_handler.py  test_config.py  test_diarization.py  test_integration.py  test_logging_setup.py  test_main.py  test_output_writer.py  test_performance.py  test_stj.py  test_transcription.py
